[package]
name = "rust_voxel_engine"
version = "0.1.0"
authors = ["pannoire <maciekolej@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.34.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
nalgebra-glm = "0.7.0"
stb_image = "0.2.2"
assimp = "0.3.1"
tobj = "2.0.2"
itertools = "0.9.0"
freetype-rs = "0.26.0"